force-app/main/default/objects/Case/fields/Account_Street_Full_Housenumber__c.field-meta.xml
<CustomField>
    <fullName>Account_Street_Full_Housenumber__c</fullName>
    <description>This field is used in email template to show the street of the account.</description>
    <formula>Account.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Street + (Full) Housenumber</label>
    <type>Text</type>
</CustomField>