force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <description>This field is used to register the reason for this case, depending on the type of case.</description>
    <inlineHelpText>This field is used to register the reason for this case, depending on the type of case.</inlineHelpText>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New tenant</fullName>
                <label>🏠 New tenant</label>
            </value>
            <value>
                <fullName>New composition of residency</fullName>
                <label>🧑‍🧑‍🧒 New composition of residency</label>
            </value>
            <value>
                <fullName>Incorrect name spelling</fullName>
                <label>🔤 Incorrect name spelling</label>
            </value>
            <value>
                <fullName>Vandalism/stolen</fullName>
                <label>⛓️‍💥 Vandalism/stolen</label>
            </value>
            <value>
                <fullName>Behaviour of an employee</fullName>
                <label>🤼 Behaviour of an employee</label>
            </value>
            <value>
                <fullName>Noise polution</fullName>
                <label>🔊 Noise polution</label>
            </value>
            <value>
                <fullName>Undesirable handling of application</fullName>
                <label>📑 Undesirable handling of application</label>
            </value>
            <value>
                <fullName>Could not find information</fullName>
                <label>🔍 Could not find information</label>
            </value>
            <value>
                <fullName>Question about my rental property</fullName>
                <label>🏠 Question about my rental property</label>
            </value>
            <value>
                <fullName>Question about my owner-occupied home</fullName>
                <label>🏡 Question about my owner-occupied home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>