force-app/main/default/objects/Case/fields/Default_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template__c</fullName>
    <description>Calculates the preferred email template developer name for the email editor on case</description>
    <formula>CASE(
	LOWER(TEXT(Label__c)),
	&quot;woonstad&quot;, &quot;Woonstad_E_mail_Handtekening_Klantcontact&quot;,
	&quot;stadswonen&quot;, &quot;Stadswonen_E_mail_Handtekening_Klantcontact&quot;,
	NULL  

)</formula>
    <inlineHelpText>Calculates the preferred email template developer name for the email editor on case</inlineHelpText>
    <label>Default Email Template</label>
    <type>Text</type>
</CustomField>