force-app/main/default/objects/Case/fields/Default_From_Mail__c.field-meta.xml
<CustomField>
    <fullName>Default_From_Mail__c</fullName>
    <description>Calculates the preferred from mail for the email editor on case</description>
    <formula>CASE(
	LOWER(TEXT(Label__c)),
	&quot;woonstad&quot;, &quot;info@woonstadrotterdam.nl&quot;,
	&quot;stadswonen&quot;, &quot;info@stadswonenrotterdam.nl&quot;, 
NULL
)</formula>
    <inlineHelpText>Calculates the preferred from mail for the email editor on case</inlineHelpText>
    <label>Default From Mail</label>
    <type>Text</type>
</CustomField>