force-app/main/default/objects/Case/fields/Full_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Account_Name__c</fullName>
    <description>Needed to show the name of the customer in data tables in Flows.</description>
    <formula>IF(

Account.IsPersonAccount,


IF(ISBLANK(Account.FirstName),&quot;&quot;,Account.FirstName) &amp;  IF(ISBLANK(Account.MiddleName),&quot;&quot;, &quot; &quot; &amp; Account.MiddleName) &amp;  IF(ISBLANK(Account.LastName),&quot;&quot;, &quot; &quot; &amp; Account.LastName),


 
Account.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Account Name</label>
    <type>Text</type>
</CustomField>