force-app/main/default/objects/Case/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <complianceGroup>GDPR (Salesforce Id)</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the related Request?</description>
    <inlineHelpText>What is the related Request?</inlineHelpText>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>