force-app/main/default/objects/Case/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <businessProcess>Question</businessProcess>
    <description>Submit a question for support</description>
    <label>Question</label>
</RecordType>