force-app/main/default/objects/Case/listViews/Name_Plate_Requests_Case.listView-meta.xml
<ListView>
    <fullName>Name_Plate_Requests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Klantcontact</label>
    <queue>Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>